# os_restful_client

./: README.md  config.cfg  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
api/: controller.py  network.py  projects.py
client/: cli.py
credentials/: session.py
driver/: exception.py  openstack.py  parsers.py  utils.py
os_restfulcli/api/: __init__.py  controller.py
os_restfulcli/client/: __init__.py  cli.py  client_utils.py  controller.py  decorators.py  parsers.py
os_restfulcli/credentials/: session.py
os_restfulcli/driver/: exception.py  openstack.py  parsers.py  utils.py
os_restfulcli/exceptions/: __init__.py
os_restfulcli/tests/: __init__.py  test_cli.py  user_json_file_example.json  yaml_test_delete.txt
os_restfulcli/tests/test_controller/: fakes.py  test_parser.py  test_project_controller.py
os_restfulcli/tests/test_driver/: test_os_driver.py
os_restfulcli/tests/test_integration/: __init__.py  test_projects.py  test_roles.py  test_users.py
tests/: __init__.py  json_file_example.json  test_cli.py  yaml_file_example.yml
tests/credentials/: test_connetcion_v2.py
tests/integration/: test_users.py
tests/test_controller/: test_project_controller.py
tests/test_integration/: fakes.yml  test_projects.py
