[metadata]
name = os_restfulcli
version=0.0.1
summary = os_restfulcli
license = Apache-2
description-file =
    README.md
author = LIP
author-email =  jorgesece@lip.pt
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    os_restfulcli

[compile_catalog]
directory = os_restfulcli/locale
domain = os_restfulcli

[update_catalog]
domain = os_restfulcli
output_dir = os_restfulcli/locale
input_file = os_restfulcli/locale/os_restfulcli.pot


[entry_points]
console_scripts =
    os_restful = os_restfulcli.client.cli:openstackcli

[pbr]
# Have pbr generate the module indexes like sphinx autodoc
autodoc_index_modules = True

# Exclude modules that won't build with autodoc (or that we don't want doc'ed);
# this requires updating the exclude_patterns variable in doc/source/conf.py
autodoc_exclude_modules = os_restfulcli.test.*